--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -1,66 +1,70 @@
-#banner {
-  color: #fcfbfb;
-  position: relative;
-  top: 0px;
-//   display: block;
-//   width: auto;
-  margin: auto; /* Center the image horizontally */
-  max-width: 100%; /* Ensure the image does not exceed its container's width */
+#banner_cont {
+    background-color: blue;
+    margin-bottom: 100px;
+  #banner {
+    color: #fcfbfb;
+    //   padding: 20px;
+    background-color: blue;
+    // height: 100%;
 
-  #banner_image {
-    display: block; /* Ensure the image behaves as a block element */
-    max-width: 100%; /* Ensure the image does not exceed its container's width */
-    height: auto; /* Maintain the image's aspect ratio */
-    margin: auto; /* Center the image horizontally */
-  }
-  #social_icons_container {
-    position: absolute;
-    top: 35%;
-    left: -7%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    // font-weight: bold;
-    // font-family: "Roboto", sans-serif;
-  }
-  #banner_text {
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    transform: translate(-50%, -50%);
-    text-align: left;
-
-    #banner_text h5 {
-      font-size: 1.5em; /* Set font size for h5 */
-    }
-
-    #banner_text h1 {
-      font-size: 3em; /* Set font size for h1 */
-    }
-
-    #banner_text p {
-      font-size: 1em; /* Set font size for paragraphs */
-    }
-    button {
-      border: solid 1px #fdb90c;
+    // .responsive_image {
+    //   display: block; 
+    //   width: 100%;
+    //   height: 100%;
+    //   margin: auto; 
+    // }
+    #social_icons_container {
       position: absolute;
-      top: 90%;
-      left: -3;
-      color: #fdb90c;
-      background-color: transparent;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      width: 300px;
-      margin: 50px 0px;
-      // height: 80px;
+      top: 35%;
+      left: -7%;
+      transform: translate(-50%, -50%);
+      justify-content: center;
+      align-items: center;
+      font-size: 2em;
+      // font-weight: bold;
+      // font-family: "Roboto", sans-serif;
+    }
+    .banner_text {
+      position: absolute;
+      top: 40%;
+      left: 40%;
+      transform: translate(-50%, -50%);
+      text-align: left;
+      width: 60%;
+      & h5 {
+        font-size: 2.0em; /* Set font size for h5 */
+        background-color: green($color: #000000);
+        margin-bottom: 20px;
+        padding-top: 0;
+}
+
+      & h1 {
+        font-size: 4.5em; /* Set font size for h1 */
+        margin-top: 0;
+        padding-top: 0;
+      }
+
+      & p {
+        font-size: 1.8em; /* Set font size for paragraphs */
+      }
+      button {
+        border: solid 1px #fdb90c;
+        position: absolute;
+        top: 90%;
+        left: -3;
+        color: #fdb90c;
+        background-color: transparent;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 1em;
+        font-weight: bold;
+        cursor: pointer;
+        width: 170px;
+        margin: 50px 0px;
+        // height: 80px;
+      }
     }
   }
 }
