--- a/src/components/our record/our_record.scss
+++ b/src/components/our record/our_record.scss
@@ -4,6 +4,7 @@
   align-content: center;
   background-color: #474242;
   padding: 50px 0;
+  margin-bottom: 100px;
 
   .our_record_item {
     display: flex;
