--- a/src/components/why choose us/skills_bar.scss
+++ b/src/components/why choose us/skills_bar.scss
@@ -1,21 +1,26 @@
-/* SkillBar.css */
-
 .skill-bar {
-    margin-bottom: 10px;
-  }
-  
+  margin-bottom: 15px;
   .skill-name {
     margin-bottom: 5px;
   }
-  
+
   .bar-container {
     width: 100%;
     height: 10px;
     background-color: #f0f0f0;
   }
-  
+
   .bar {
     height: 100%;
-    background-color: #007bff; /* Change color as needed */
+    background-color: #007bff;
   }
-  
+
+  #percentage {
+    position: relative;
+    top: -20px;
+    right: 0;
+    text-align: right;
+    padding-right: 5px;
+    color: white;
+  }
+}
