--- a/src/components/portfolio videos/portfolio_videos.scss
+++ b/src/components/portfolio videos/portfolio_videos.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    position: relative;
+    position: relative;margin-bottom: 100px;
   
     #port_vid_text {
       text-align: center; 
