--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -4,6 +4,7 @@
   width: 75%;
   margin: auto;
   padding-top: 100px;
+  padding-bottom: 100px;
   #testimonials_text {
     width: 40%;
     padding-top: 0;
