--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -4,7 +4,7 @@
   gap: 50px;
   align-items: center;
   padding: 0 20px;
-  background-color: #333;
+  // background-color: #333;
   color: #fff;
   font-size: 1.2rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
