--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -25,7 +25,8 @@
           color: #fff;
           text-decoration: none;
           &:hover {
-            color: #f00;
+            color: gold;
+            font-weight: 900;
           }
         }
       }
