--- a/src/components/blog update/blog_update.scss
+++ b/src/components/blog update/blog_update.scss
@@ -29,6 +29,10 @@
       font-weight: 900;
       margin-top: 20px;
       cursor: pointer;
+      &:hover {
+        color: rgb(255, 255, 255);
+        background-color: gold;
+      }
     }
   }
   #blog_content {
