--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 75%;
   margin: auto;
-    // background-color: blue;
+  // background-color: blue;
   #gallery_text {
     display: flex;
     justify-content: space-between;
@@ -31,6 +31,10 @@
       height: 50px;
       color: gold;
       cursor: pointer;
+      &:hover {
+        color: rgb(255, 255, 255);
+        background-color: gold;
+      }
     }
   }
   #gallery_content {
