--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -46,7 +46,11 @@
         font-weight: 900;
         margin-top: 20px;
         cursor: pointer;
-      }
+        &:hover {
+          color: rgb(255, 255, 255);
+          background-color: gold;
+        }
+  }
     }
   }
 }
