--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,5 @@
+@import '../scss/config';
+
 #about {
   display: flex;
   justify-content: center;
@@ -54,22 +56,22 @@
     }
 
     button {
-      border: solid 1px #fdb90c;
-      color: #fdb90c;
-      background-color: transparent;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      width: 180px;
-      margin: 20px 0px;
-      &:hover {
-        color: rgb(255, 255, 255);
-        background-color: gold;
-      }
+      // border: solid 1px #fdb90c;
+      // color: #fdb90c;
+      // background-color: transparent;
+      // padding: 15px 32px;
+      // text-align: center;
+      // text-decoration: none;
+      // display: inline-block;
+      // font-size: 1em;
+      // font-weight: bold;
+      // cursor: pointer;
+      // width: 180px;
+      // margin: 20px 0px;
+      // &:hover {
+      //   color: rgb(255, 255, 255);
+      //   background-color: gold;
+      // }
     }
   }
 }
