--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,3 +1,5 @@
+@import "../scss/config";
+
 #gallery {
   display: flex;
   flex-direction: column;
@@ -25,16 +27,16 @@
     }
 
     button {
-      background-color: transparent;
-      border: 1px solid gold;
-      width: 200px;
-      height: 50px;
-      color: gold;
-      cursor: pointer;
-      &:hover {
-        color: rgb(255, 255, 255);
-        background-color: gold;
-      }
+      // background-color: transparent;
+      // border: 1px solid gold;
+      // width: 200px;
+      // height: 50px;
+      // color: gold;
+      // cursor: pointer;
+      // &:hover {
+      //   color: rgb(255, 255, 255);
+      //   background-color: gold;
+      // }
     }
   }
   #gallery_content {
