--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -1,4 +1,6 @@
 #hire_us_container {
+  @import "../scss/config";
+  
   #hire_us {
     display: flex;
     flex-direction: column;
@@ -37,20 +39,20 @@
         font-size: 1.3em;
       }
       button {
-        border: 1px solid gold;
-        background-color: transparent;
-        padding: 15px;
-        color: gold;
+        // border: 1px solid gold;
+        // background-color: transparent;
+        // padding: 15px;
+        // color: gold;
         width: 200px;
-        font-size: 1em;
-        font-weight: 900;
-        margin-top: 20px;
-        cursor: pointer;
-        &:hover {
-          color: rgb(255, 255, 255);
-          background-color: gold;
-        }
-  }
+        // font-size: 1em;
+        // font-weight: 900;
+        // margin-top: 20px;
+        // cursor: pointer;
+        // &:hover {
+        //   color: rgb(255, 255, 255);
+        //   background-color: gold;
+        // }
+      }
     }
   }
 }
