--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,10 +1,12 @@
+@import "../scss/config";
+
 #nav_container {
   display: flex;
-  justify-content: flex-start;
-  gap: 50px;
+  justify-content: center;
   align-items: center;
-  padding: 0 20px;
-  // background-color: #333;
+  // align-content: center;
+  // padding: 0 20px;
+  background-color: #333;
   color: #fff;
   font-size: 1.2rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -13,12 +15,23 @@
     font-size: 1.5rem;
     font-weight: bold;
     color: #f00;
-    // width: 80px;
+    margin-right: 100px;
+    img {
+      width: 80px;
+      height: 30px;
+      margin: 0;
+      padding: 0;
+    }
   }
-  nav {
+  Nav {
+    margin: 0px 150px 0px 150px;
     ul {
       display: flex;
+      justify-items: center;
+      align-items: center;
+      display: flex;
       list-style: none;
+      margin: 0;
       li {
         margin: 0 10px;
         a {
@@ -28,6 +41,9 @@
             color: gold;
             font-weight: 900;
           }
+        }
+        button {
+          // margin: 0px 0px 0px 150px;
         }
       }
     }
