--- a/src/components/portfolio videos/portfolio_videos.scss
+++ b/src/components/portfolio videos/portfolio_videos.scss
@@ -1,3 +1,5 @@
+@import '../scss/config';
+
 #port_vid {
   display: flex;
   flex-direction: column;
@@ -18,17 +20,17 @@
     }
 
     button {
-      width: 200px;
-      padding: 20px;
-      background-color: transparent;
-      border: 1px solid gold;
-      color: gold;
+      // width: 200px;
+      // padding: 20px;
+      // background-color: transparent;
+      // border: 1px solid gold;
+      // color: gold;
       margin-top: 30px;
-      cursor: pointer;
-      &:hover {
-        color: rgb(255, 255, 255);
-        background-color: gold;
-      }
+      // cursor: pointer;
+      // &:hover {
+      //   color: rgb(255, 255, 255);
+      //   background-color: gold;
+      // }
     }
   }
 
