--- a/src/components/footer body/footer_body.scss
+++ b/src/components/footer body/footer_body.scss
@@ -1,6 +1,7 @@
 #footer_body {
   position: relative;
   width: 100%;
+  color: white;
   .footer_body_content {
     display: flex;
     flex-direction: column;
