--- a/src/components/banners/menuBanner.scss
+++ b/src/components/banners/menuBanner.scss
@@ -3,7 +3,7 @@
     padding-bottom: 100px;
     color: white;
     #MenuBanner {
-      margin-bottom: 100px;
+      // margin-bottom: 100px;
       #MenuBannerText {
         display: flex;
         flex-direction: column;
