--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -1,1 +1,74 @@
-@import '../scss/config'
+@import "../scss/config";
+
+#blog {
+  color: white;
+  background-color: #230b0b;
+  #blogText {
+    display: flex;
+    justify-content: space-between;
+    align-items: last baseline;
+    margin: auto;
+    width: 75%;
+    div {
+        width: 50%;
+    }
+
+    h5 {
+      font-size: 1.5em;
+      span {
+        color: gold;
+        margin-right: 10px;
+      }
+    }
+    h1 {
+      font-size: 3.5em;
+      color: gold;
+    }
+  }
+  #blogContent {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+    padding-bottom: 100px;
+    margin: auto;
+    width: 75%;
+    #blog_card {
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(52, 72, 83);
+      max-height: 55vh;
+      width: 29%;
+      padding: 20px;
+      > img {
+        width: 100%;
+        height: 50vh;
+      }
+
+      h1 {
+        padding: 0;
+        margin: 0;
+        color: gold;
+      }
+      .date_icon {
+        display: flex;
+        align-content: center;
+        justify-items: center;
+        gap: 10px;
+        align-items: center;
+        img {
+          height: 2vh;
+          margin-top: 20px;
+        }
+        p {
+          font-size: 1em;
+          padding-bottom: 0;
+          margin-bottom: 0;
+        }
+      }
+      h1 {
+        font-size: 1.5em;
+        margin-top: 20px;
+      }
+    }
+  }
+}
