--- a/src/components/blogUpdate/blog_update.scss
+++ b/src/components/blogUpdate/blog_update.scss
@@ -4,11 +4,12 @@
   width: 75%;
   margin: auto;
   margin-bottom: 100px;
+  color: white;
   #blog_text {
     display: flex;
     justify-content: space-between;
     align-items: last baseline;
-    margin-top: 100px;
+    // margin-top: 100px;
 
     h5 {
       font-size: 1.5em;
