--- a/src/components/gallery/myPortfolio.scss
+++ b/src/components/gallery/myPortfolio.scss
@@ -1,1 +1,79 @@
-@import '../scss/config'
+@import "../scss/config";
+
+#myPortfolio {
+  background-color: $page-background-color;
+  color: white;
+
+  #myPortfolio_text {
+    display: flex;
+    justify-content: space-between;
+    align-items: last baseline;
+    text-align: left;
+    width: 75%;
+    margin: auto;
+    z-index: 5000;
+    color: white;
+    // background-color: yellow;
+
+    > div h5 {
+      font-size: 1.5em;
+      padding: 0;
+      margin-top: 50px;
+      padding: 0;
+      margin-top: 0;
+      margin-bottom: 0;
+      span {
+        color: gold;
+        margin-right: 10px;
+      }
+    }
+
+    h1 {
+      font-size: 3.5em;
+      color: gold;
+      padding: 0;
+      margin: 0;
+    }
+  }
+  #myPortfolio_content {
+    width: 75%;
+    margin: auto;
+    .grid-container {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: grid;
+      gap: 10px;
+      // background-color: #2196F3;
+      padding: 10px;
+      margin-bottom: 100px;
+    }
+
+    .grid-item {
+      background-color: rgba(255, 255, 255, 0.8);
+      text-align: center;
+      padding: 20px;
+      font-size: 30px;
+      width: 100%;
+    }
+
+    // .item1 {
+    //   grid-column: 1 / span 2;
+    //   grid-row: 1;
+    // }
+
+    .item2 {
+      grid-column: 2 / span 3;
+      grid-row: 1;
+    }
+
+    .item3 {
+      grid-column: 2 / span 3;
+      grid-row: 1;
+    }
+
+    .item5 {
+      grid-column: 2 / span 3;
+      grid-row: 2;
+    }
+  }
+}
