--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // align-content: center;
+  align-content: center;
   // padding: 0 20px;
   // background-color: #333;
   color: #fff;
@@ -15,7 +15,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     color: #f00;
-    margin-right: 100px;
+    // margin-right: 100px;
     img {
       width: 80px;
       height: 30px;
@@ -23,7 +23,7 @@
       padding: 0;
     }
   }
-  Nav {
+  nav {
     margin: 0px 150px 0px 150px;
     ul {
       display: flex;
@@ -39,11 +39,8 @@
           text-decoration: none;
           &:hover {
             color: gold;
-            font-weight: 900;
+            // font-weight: 900;
           }
-        }
-        button {
-          // margin: 0px 0px 0px 150px;
         }
       }
     }
