--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -1,5 +1,10 @@
 // _config.scss
 
+
+// Color Properties
+$page-background-color: #230B0B; // Page background color
+
+
 //input Properties
 $input-border: 1px solid gold; // Input border
 $input-background-color: transparent; // Input background color
