--- a/src/components/gallery/myPortfolio.scss
+++ b/src/components/gallery/myPortfolio.scss
@@ -43,37 +43,39 @@
       display: -ms-flexbox;
       display: grid;
       gap: 10px;
-      // background-color: #2196F3;
+      // background-color: #2196f3;
       padding: 10px;
       margin-bottom: 100px;
     }
 
     .grid-item {
-      background-color: rgba(255, 255, 255, 0.8);
+      // background-color: rgba(255, 255, 255, 0.8);
       text-align: center;
-      padding: 20px;
+      //   padding: 20px;
       font-size: 30px;
-      width: 100%;
+      img {
+        width: 100%;
+      }
     }
 
     // .item1 {
-    //   grid-column: 1 / span 2;
-    //   grid-row: 1;
+    //   grid-column: 1 ;
+    //   grid-row: 1 / span 2;
     // }
 
     .item2 {
-      grid-column: 2 / span 3;
+      grid-column: 2 / span 2;
       grid-row: 1;
+      // background-color: blue;
     }
 
-    .item3 {
-      grid-column: 2 / span 3;
-      grid-row: 1;
+    .item4 {
+      grid-column: 2;
+      grid-row: 2 / span 2;
     }
-
-    .item5 {
-      grid-column: 2 / span 3;
-      grid-row: 2;
+    .item8 {
+      grid-column: 1 / span 2;
+      grid-row: 4;
     }
   }
 }
