--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -3,4 +3,8 @@
 #homepage_container {
   background-color: #230B0B;
   color: white;
+  // .stickyBanner {
+  //   position: sticky;
+  //   position: -webkit-sticky;
+  // }
 }
