--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -5,17 +5,14 @@
   margin-bottom: 100px;
   #banner {
     color: #fcfbfb;
-    //   padding: 20px;
     background-color: blue;
-    // height: 100%;
-
-    // .responsive_image {
-    //   display: block;
-    //   width: 100%;
-    //   height: 100%;
-    //   margin: auto;
-    // }
     #social_icons_container {
+      > div {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        }
+      display: flex;
       position: absolute;
       top: 35%;
       left: -7%;
@@ -23,9 +20,10 @@
       justify-content: center;
       align-items: center;
       font-size: 2em;
-      // font-weight: bold;
-      // font-family: "Roboto", sans-serif;
-    }
+      .social-icon {
+        display: flex;
+      }
+      }
     .banner_text {
       position: absolute;
       top: 40%;
@@ -48,21 +46,6 @@
 
       & p {
         font-size: 1.8em; /* Set font size for paragraphs */
-      }
-      button {
-        // border: solid 1px #fdb90c;
-        // color: #fdb90c;
-        // background-color: transparent;
-        // text-decoration: none;
-        // font-size: 1em;
-        // font-weight: bold;
-        // cursor: pointer;
-        // width: 170px;
-        // padding: 10px;
-        // &:hover {
-        //   color: rgb(255, 255, 255);
-        //   background-color: gold;
-        // }
       }
     }
   }
