--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -5,17 +5,16 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  // padding: 0 20px;
-  // background-color: #333;
   color: #fff;
   font-size: 1.2rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: -webkit-sticky;
+  position: sticky;
 
   .logo {
     font-size: 1.5rem;
     font-weight: bold;
     color: #f00;
-    // margin-right: 100px;
     img {
       width: 80px;
       height: 30px;
@@ -39,7 +38,6 @@
           text-decoration: none;
           &:hover {
             color: gold;
-            // font-weight: 900;
           }
         }
       }
