--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,5 +1,6 @@
-@import '../scss/config';
+@import "../scss/config";
 
-#contact {
-    
+@media only screen and (min-width: 768px) {
+  #contact {
+  }
 }
