--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,77 +1,77 @@
-@import '../scss/config';
+@import "../scss/config";
 
-#about {
-  display: flex;
-  justify-content: center;
-  width: 80%;
-  margin: auto;
-  height: auto;
-  margin-bottom: 100px;
-
-  #aboutImage {
+// Media query for mobile screens
+@media only screen and (max-width: 768px) {
+  #about {
     display: flex;
-    width: 40%;
+    flex-direction: column;
+    align-items: center;
+    // width: 100%;
+    margin: 0;
+    padding: 10px;
+  }
+  .grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    margin: 0;
+    // margin: 10px;
     img {
-      max-width: 100%;
-    }
-    #side1 {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin: 0px 0px 0px 10px;
-      width: 50%;
-      //   background-color: blue;
-    }
-    #side2 {
-      display: flex;
-      flex-direction: column;
-      width: 50%;
-      height: auto;
-      margin: 0px 0px 0px 20px;
+      width: 100%;
+      // padding: 10px;
     }
   }
   #about_text {
-    width: 50%;
-    margin-left: 40px;
-    color: gold;
-    // background-color: green;
-    padding: 0px 10px 0px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px 0px;
+    text-align: center;
+  }
+}
 
-    & h5 {
-      font-size: 1.5em;
-      margin-top: 0;
-      padding-top: 0;
-    }
-    & h1 {
-      font-size: 2.9em;
-    }
-    span {
-      color: white;
-      margin-right: 8px;
-    }
-    p {
-      font-size: 1.2em;
-      line-height: 1.5em;
-      color: white;
-    }
+@media only screen and (min-width: 769px) {
+  #about {
+    display: flex;
+    justify-content: center;
+    width: 75%;
+    margin: auto;
+    gap: 20px;
+    margin-bottom: 100px;
+    // background-color: $page-background-color;
 
-    button {
-      // border: solid 1px #fdb90c;
-      // color: #fdb90c;
-      // background-color: transparent;
-      // padding: 15px 32px;
-      // text-align: center;
-      // text-decoration: none;
-      // display: inline-block;
-      // font-size: 1em;
-      // font-weight: bold;
-      // cursor: pointer;
-      // width: 180px;
-      // margin: 20px 0px;
-      // &:hover {
-      //   color: rgb(255, 255, 255);
-      //   background-color: gold;
+    .grid-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      width: 60%;
+
+      .responsive_image {
+        width: 49%;
+      }
+    }
+    #about_text {
+      width: 50%;
+      // color: gold;
+
+      & h5 {
+        // font-size: 1.2em;
+        // margin: 0;
+      }
+      & h1 {
+        // font-size: 2em;
+      }
+      // span {
+      //   color: white;
+      //   margin-right: 8px;
       // }
+      p {
+        // font-size: 1em;
+        // line-height: 1.4em;
+        // color: white;
+      }
     }
   }
 }
