--- a/src/components/about/aboutDetails.scss
+++ b/src/components/about/aboutDetails.scss
@@ -1,134 +1,93 @@
-#aboutdetailsContainer {
-  background-color: #230b0b;
-  padding-bottom: 100px;
-  color: white;
-  #aboutBanner {
-    margin-bottom: 100px;
-    #aboutDetailsText {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 50%;
-      margin: auto;
-      text-align: center;
-      margin-top: 100px;
+@import "../scss/config";
 
-      h1 {
-        font-size: 2.9em;
-        color: gold;
-      }
-      p {
-        font-size: 1.2em;
-        line-height: 1.5em;
-        color: white;
-      }
-    }
-  }
-  #aboutUsCardContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: flex-start;
-    gap: 20px;
-    margin: auto;
-    width: 75%;
+@media only screen and (min-width: 768px) {
+  #aboutdetailsContainer {
+    background-color: #230b0b;
     padding-bottom: 100px;
+    color: white;
+    #aboutBanner {
+      margin-bottom: 100px;
+      #aboutDetailsText {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 50%;
+        margin: auto;
+        text-align: center;
+        margin-top: 100px;
 
-    .aboutUsCard {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      align-content: flex-start;
-      width: 30%;
-      padding: 20px;
-      background-color: transparent;
-      border-radius: 2px;
-      box-shadow: 0px 0px 10px 0px #000000;
-      text-align: left;
-      border: 1px solid rgb(255, 255, 255);
-      & h1 {
-        text-align: left;
-        font-size: 1.9em;
-        color: gold;
-        margin-top: 10px;
-        text-align: left;
-      }
-      hr {
-        align-items: flex-start;
-        width: 20%;
-        border: 1px solid gold;
-        margin-left: 0px;
-      }
-      p {
-        font-size: 1em;
-        color: white;
-        margin-top: 10px;
-      }
-    }
-  }
-  #ourSkillsContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 75%;
-    padding-bottom: 100px;
-    #ourSkillsText {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 45%;
-      margin: auto;
-      text-align: left;
-
-      h5 {
-        font-size: 1.9em;
-        color: gold;
-        padding: 0;
-        margin: 0;
-        span {
+        h1 {
+          font-size: 2.9em;
+          color: gold;
+        }
+        p {
+          font-size: 1.2em;
+          line-height: 1.5em;
           color: white;
-          margin-right: 8px;
         }
       }
-      h1 {
-        font-size: 2.9em;
-        color: gold;
-        // padding: 0;
-        margin-top: 10px;
-        // background-color: rgb(226, 241, 8);
-      }
-      p {
-        font-size: 1.2em;
-        line-height: 1.5em;
-        color: white;
-      }
     }
-    img {
-      width: 50%;
-      height: 60vh;
-    }
-  }
-  #whyChooseUsContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 75%;
-    // background-color: green;
-    #whyChooseUsTextContainer {
+    #aboutUsCardContainer {
       display: flex;
       justify-content: center;
-      align-items: last baseline;
-      justify-content: space-between;
-    //   background-color: rgb(214, 69, 11);
-      #whyChooseUsTextTitle {
+      align-items: center;
+      align-content: flex-start;
+      gap: 20px;
+      margin: auto;
+      width: 75%;
+      padding-bottom: 100px;
+
+      .aboutUsCard {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        align-content: flex-start;
+        width: 30%;
+        padding: 20px;
+        background-color: transparent;
+        border-radius: 2px;
+        box-shadow: 0px 0px 10px 0px #000000;
+        text-align: left;
+        border: 1px solid rgb(255, 255, 255);
+        & h1 {
+          text-align: left;
+          font-size: 1.9em;
+          color: gold;
+          margin-top: 10px;
+          text-align: left;
+        }
+        hr {
+          align-items: flex-start;
+          width: 20%;
+          border: 1px solid gold;
+          margin-left: 0px;
+        }
+        p {
+          font-size: 1em;
+          color: white;
+          margin-top: 10px;
+        }
+      }
+    }
+    #ourSkillsContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      width: 75%;
+      padding-bottom: 100px;
+      #ourSkillsText {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         width: 45%;
-        // background-color: rgb(16, 165, 224);
+        margin: auto;
+        text-align: left;
+
         h5 {
           font-size: 1.9em;
+          color: gold;
           padding: 0;
           margin: 0;
           span {
@@ -137,19 +96,63 @@
           }
         }
         h1 {
-          font-size: 3.19em;
+          font-size: 2.9em;
           color: gold;
+          // padding: 0;
           margin-top: 10px;
+          // background-color: rgb(226, 241, 8);
+        }
+        p {
+          font-size: 1.2em;
+          line-height: 1.5em;
+          color: white;
         }
       }
-      p {
-        font-size: 1.2em;
-        line-height: 1.5em;
-        color: white;
-        width: 45%;
+      img {
+        width: 50%;
+        height: 60vh;
       }
     }
-    #whyChooseUsCardContainer {
+    #whyChooseUsContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      width: 75%;
+      // background-color: green;
+      #whyChooseUsTextContainer {
+        display: flex;
+        justify-content: center;
+        align-items: last baseline;
+        justify-content: space-between;
+        //   background-color: rgb(214, 69, 11);
+        #whyChooseUsTextTitle {
+          width: 45%;
+          // background-color: rgb(16, 165, 224);
+          h5 {
+            font-size: 1.9em;
+            padding: 0;
+            margin: 0;
+            span {
+              color: white;
+              margin-right: 8px;
+            }
+          }
+          h1 {
+            font-size: 3.19em;
+            color: gold;
+            margin-top: 10px;
+          }
+        }
+        p {
+          font-size: 1.2em;
+          line-height: 1.5em;
+          color: white;
+          width: 45%;
+        }
+      }
+      #whyChooseUsCardContainer {
         display: flex;
         justify-content: center;
         gap: 30px;
@@ -157,19 +160,20 @@
         margin-bottom: 100px;
         // padding: 0;
         .whyChooseUsCard {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            width: 30%;
-            padding: 10px;
-            border: 1px solid rgb(255, 255, 255);
-            img {
-                width: 10%;
-                // height: 50vh;
-            }
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          width: 30%;
+          padding: 10px;
+          border: 1px solid rgb(255, 255, 255);
+          img {
+            width: 10%;
+            // height: 50vh;
+          }
         }
+      }
     }
   }
 }
