--- a/src/components/footer body/footer_body.scss
+++ b/src/components/footer body/footer_body.scss
@@ -1,39 +1,112 @@
-#footer_body {
-  position: relative;
-  width: 100%;
-  color: white;
-  .footer_body_content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    // background-color: rgb(128, 126, 0);
-    #newsletter {
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      //   background-color: green;
-      width: 75%;
-      margin: auto;
-      padding: 0;
-      position: relative;
-      top: -50px;
-    }
-    #footer1 {
-      display: flex;
-      justify-content: space-between;
-    //   background-color: red;
-      width: 75%;
-      margin: auto;
-      padding-top: 0;
-    }
+@import "../scss/config";
 
-    #copyright {
-      width: 75%;
-      margin: auto;
+@media only screen and (min-width: 768px) {
+  #footer_body {
+    // position: relative;
+    // width: 100%;
+    color: white;
+    // padding: 10px;
+    .footer_body_content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      // width: 100%;
+      // background-color: rgb(128, 126, 0);
+      // #newsletter {
+      //   display: flex;
+      //   justify-content: center;
+      //   align-content: center;
+      //   //   background-color: green;
+      //   width: 75%;
+      //   margin: auto;
+      //   padding: 0;
+      //   // position: relative;
+      //   // top: -50px;
+      // }
+      #footer1 {
+        display: flex;
+        // justify-content: space-between;
+        //   background-color: red;
+        // width: 75%;
+        // margin: auto;
+        padding-top: 0;
+      }
+      #copyright {
+        // width: 75%;
+        // margin: auto;
+      }
     }
+    // .footer1_item {
+    //   width: 33%;
+    // }
   }
-  .footer1_item {
-    width: 33%;
+}
+
+@media only screen and (max-width: 768px) {
+  #footer_body {
+    position: relative;
+    width: 100%;
+    color: white;
+    // height: 300vh;
+    background-color: #230b0b;
+    .footer_body_content {
+      display: flex;
+      flex-direction: column;
+      background-color: #230b0b;
+      align-items: center;
+      // width: 100%;
+      // #newsletter {
+      //   display: flex;
+      //   justify-content: center;
+      //   align-content: center;
+      //   // background-color: green;
+      //   // width: 100%;
+      //   margin: auto;
+      //   padding: 0;
+      //   // position: relative;
+      //   // top: -50px;
+      // }
+      #footer1 {
+        display: flex;
+        flex-direction: column;
+        // justify-content: space-between;
+        // background-color: red;
+        width: 100%;
+        margin: auto;
+        padding-top: 0;
+        padding: 10px;
+        .footer1_item {
+          width: 90%;
+          ul {
+            margin: 0;
+            li {
+              list-style-type: none;
+              position: relative; /* Set position to relative for pseudo-element */
+              padding-left: 0; /* Add padding for arrow */
+              margin-bottom: 3px; /* Add margin between list items */
+
+              &:before {
+                content: "\2192"; /* Unicode arrow character (→) */
+                position: absolute;
+                left: -35px;
+              }
+            }
+          }
+        }
+      }
+    }
+    #copyright {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 95%;
+      // margin: auto;
+      // text-align: center;
+      border-top: 1px solid #ffffff;
+      // margin: 0px 20px;
+      // margin: 10px;
+      padding: 30px;
+      // background-color: #02fa86;
+    }
   }
 }
