--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,75 +1,110 @@
 @import "../scss/config";
 
-#gallery {
-  display: flex;
-  flex-direction: column;
-  width: 75%;
-  margin: auto;
-  // background-color: blue;
-  #gallery_text {
+@media only screen and (min-width: 768px) {
+  #gallery {
     display: flex;
-    justify-content: space-between;
-    align-items: last baseline;
-    width: 100%;
-    // margin: auto;
-    color: gold;
+    flex-direction: column;
+    // width: 100%;
+    // margin: 10px;
+    // background-color: blue;
+    #gallery_text {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: last baseline;
+      width: 100%;
+      // margin: auto;
+      color: gold;
 
-    & h5 {
-      font-size: 1.5em;
-    }
-    span {
-      color: white;
-      margin-right: 10px;
-    }
+      & h5 {
+        font-size: 1.5em;
+      }
+      span {
+        color: white;
+        margin-right: 10px;
+      }
 
-    & h1 {
-      font-size: 3em;
+      & h1 {
+        font-size: 3em;
+      }
     }
-
-    button {
-      // background-color: transparent;
-      // border: 1px solid gold;
-      // width: 200px;
-      // height: 50px;
-      // color: gold;
-      // cursor: pointer;
-      // &:hover {
-      //   color: rgb(255, 255, 255);
-      //   background-color: gold;
-      // }
+    #gallery_container {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      width: 100%;
+      #gallery_content {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+      #gallery_content2 {
+        display: flex;
+        flex-direction: column;
+      }
+      #gallery_content3 {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
     }
   }
-  #gallery_content {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    width: 100%;
-    #gallery_content1 {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    #gallery_content2 {
-      display: flex;
-      flex-direction: column;
-    }
-    #gallery_content3 {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
+  #gallerySliderContainer {
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+  .sliding-gallery-container .slick-slide {
+    display: flex !important; /* Ensure the slides take up full width */
+  }
+
+  .gallery-image {
+    width: 400px; /* Ensure the image takes up full width of the slide */
+    height: 400px; /* Ensure the image takes up full height of the slide */
+    object-fit: cover; /* Ensure the image fills the container while maintaining aspect ratio */
   }
 }
-#gallerySliderContainer {
-  margin-top: 50px;
-  margin-bottom: 100px;
-}
-.sliding-gallery-container .slick-slide {
-  display: flex !important; /* Ensure the slides take up full width */
-}
 
-.gallery-image {
-  width: 400px; /* Ensure the image takes up full width of the slide */
-  height: 400px; /* Ensure the image takes up full height of the slide */
-  object-fit: cover; /* Ensure the image fills the container while maintaining aspect ratio */
+@media only screen and (max-width: 768px) {
+  #gallery {
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+    margin: 10px;
+    text-align: center;
+    // background-color: blue;
+    #gallery_text {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      // margin: auto;
+      color: gold;
+
+      & h5 {
+        font-size: 1.3em;
+      }
+      span {
+        color: white;
+        margin-right: 10px;
+      }
+
+      & h1 {
+        font-size: 1.5em;
+        margin-top: 10px;
+      }
+    }
+    #gallery_container {
+      display: flex;
+      // justify-content: center;
+      flex-direction: column;
+      gap: 10px;
+      width: 100%;
+      #gallery_content {
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
