--- a/src/components/gallery/myPortfolio.scss
+++ b/src/components/gallery/myPortfolio.scss
@@ -1,81 +1,83 @@
 @import "../scss/config";
 
-#myPortfolio {
-  background-color: $page-background-color;
-  color: white;
-
-  #myPortfolio_text {
-    display: flex;
-    justify-content: space-between;
-    align-items: last baseline;
-    text-align: left;
-    width: 75%;
-    margin: auto;
-    z-index: 5000;
+@media only screen and (min-width: 768px) {
+  #myPortfolio {
+    background-color: $page-background-color;
     color: white;
-    // background-color: yellow;
 
-    > div h5 {
-      font-size: 1.5em;
-      padding: 0;
-      margin-top: 50px;
-      padding: 0;
-      margin-top: 0;
-      margin-bottom: 0;
-      span {
+    #myPortfolio_text {
+      display: flex;
+      justify-content: space-between;
+      align-items: last baseline;
+      text-align: left;
+      width: 75%;
+      margin: auto;
+      z-index: 5000;
+      color: white;
+      // background-color: yellow;
+
+      > div h5 {
+        font-size: 1.5em;
+        padding: 0;
+        margin-top: 50px;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        span {
+          color: gold;
+          margin-right: 10px;
+        }
+      }
+
+      h1 {
+        font-size: 3.5em;
         color: gold;
-        margin-right: 10px;
+        padding: 0;
+        margin: 0;
       }
     }
-
-    h1 {
-      font-size: 3.5em;
-      color: gold;
-      padding: 0;
-      margin: 0;
-    }
-  }
-  #myPortfolio_content {
-    width: 75%;
-    margin: auto;
-    .grid-container {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: grid;
-      gap: 10px;
-      // background-color: #2196f3;
-      padding: 10px;
-      margin-bottom: 100px;
-    }
-
-    .grid-item {
-      // background-color: rgba(255, 255, 255, 0.8);
-      text-align: center;
-      //   padding: 20px;
-      font-size: 30px;
-      img {
-        width: 100%;
+    #myPortfolio_content {
+      width: 75%;
+      margin: auto;
+      .grid-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: grid;
+        gap: 10px;
+        // background-color: #2196f3;
+        padding: 10px;
+        margin-bottom: 100px;
       }
-    }
 
-    // .item1 {
-    //   grid-column: 1 ;
-    //   grid-row: 1 / span 2;
-    // }
+      .grid-item {
+        // background-color: rgba(255, 255, 255, 0.8);
+        text-align: center;
+        //   padding: 20px;
+        font-size: 30px;
+        img {
+          width: 100%;
+        }
+      }
 
-    .item2 {
-      grid-column: 2 / span 2;
-      grid-row: 1;
-      // background-color: blue;
-    }
+      // .item1 {
+      //   grid-column: 1 ;
+      //   grid-row: 1 / span 2;
+      // }
 
-    .item4 {
-      grid-column: 2;
-      grid-row: 2 / span 2;
-    }
-    .item8 {
-      grid-column: 1 / span 2;
-      grid-row: 4;
+      .item2 {
+        grid-column: 2 / span 2;
+        grid-row: 1;
+        // background-color: blue;
+      }
+
+      .item4 {
+        grid-column: 2;
+        grid-row: 2 / span 2;
+      }
+      .item8 {
+        grid-column: 1 / span 2;
+        grid-row: 4;
+      }
     }
   }
 }
