--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,43 +1,45 @@
 @import "../scss/config";
 
-#nav_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  color: #fff;
-  font-size: 1.2rem;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  position: -webkit-sticky;
-  position: sticky;
-
-  .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #f00;
-    img {
-      width: 80px;
-      height: 30px;
-      margin: 0;
-      padding: 0;
+@media only screen and (min-width: 769px) {
+  #nav_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    color: #fff;
+    font-size: 1.2rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 75%;
+    margin: auto;
+    // background-color: green;
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #f00;
+      img {
+        width: 80px;
+        height: 30px;
+        margin: 0;
+        padding: 0;
+      }
     }
-  }
-  nav {
-    margin: 0px 150px 0px 150px;
-    ul {
-      display: flex;
-      justify-items: center;
-      align-items: center;
-      display: flex;
-      list-style: none;
-      margin: 0;
-      li {
-        margin: 0 10px;
-        a {
-          color: #fff;
-          text-decoration: none;
-          &:hover {
-            color: gold;
+    nav {
+      margin: 0px 150px 0px 150px;
+      ul {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        display: flex;
+        list-style: none;
+        margin: 0;
+        li {
+          margin: 0 10px;
+          a {
+            color: #fff;
+            text-decoration: none;
+            &:hover {
+              color: gold;
+            }
           }
         }
       }
