--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -1,54 +1,120 @@
-@import '../scss/config';
+@import "../scss/config";
 
-#newsletter {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  width: 75%;
-  margin: auto;
-  background-color: rgb(52, 72, 83);
-  padding: 20px;
-  margin-top: 100px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+@media only screen and (min-width: 768px) {
+  #newsletter {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    // width: 75%;
+    margin: auto;
+    // background-color: rgb(52, 72, 83);
+    // padding: 20px;
+    // margin-top: 100px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-  .newsletter_text {
-    width: 45%;
+    .newsletter_text {
+      width: 45%;
 
-    h1 {
-      font-size: 3em;
-      color: gold;
-      padding-bottom: 0;
-      margin-bottom: 0;
+      h1 {
+        font-size: 3em;
+        color: gold;
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
+
+      p {
+        margin-top: 0;
+      }
     }
-
-    p {
-      margin-top: 0;
+    form {
+      width: 45%;
+      input {
+        // width: 60%;
+        // //   height: 4vh;
+        // padding: 12px;
+        // border: 1px solid gold;
+        // background-color: transparent;
+      }
+      button {
+        width: 30%;
+        border: 0px solid gold;
+        border-radius: 0px;
+        // width: 160px;
+        // padding: 12px;
+        background-color: rgb(190, 166, 27);
+        color: rgb(255, 255, 255);
+        // font-weight: bolder;
+        // cursor: pointer;
+        // font-size: 1em;
+        &:hover {
+          color: rgb(0, 0, 0);
+          background-color: gold;
+        }
+      }
     }
   }
-  form {
-    width: 45%;
-    input {
-      // width: 60%;
-      // //   height: 4vh;
-      // padding: 12px;
-      // border: 1px solid gold;
-      // background-color: transparent;
-    }
-    button {
-      width: 30%;
-      border: 0px solid gold;
-      border-radius: 0px;
-      // width: 160px;
-      // padding: 12px;
-      background-color: rgb(190, 166, 27);
-      color: rgb(255, 255, 255);
-      // font-weight: bolder;
-      // cursor: pointer;
-      // font-size: 1em;
-      &:hover {
-        color: rgb(0, 0, 0);
-        background-color: gold;
-      }
 }
+
+@media only screen and (max-width: 768px) {
+  #newsletter {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    // width: 100%;
+    // margin: auto;
+    background-color: rgb(52, 72, 83);
+    margin-top: 200px;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+
+    .newsletter_text {
+      width: 100%;
+
+      h1 {
+        font-size: 3em;
+        color: gold;
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
+
+      p {
+        margin-top: 0;
+      }
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      input {
+        width: 100%;
+        height: 4vh;
+        // padding: 12px;
+        // border: 1px solid gold;
+        // background-color: transparent;
+      }
+      button {
+        width: 90%;
+        border: 0px solid gold;
+        border-radius: 0px;
+        margin-top: 10px;
+        // width: 160px;
+        // padding: 12px;
+        background-color: rgb(190, 166, 27);
+        color: rgb(255, 255, 255);
+        // font-weight: bolder;
+        // cursor: pointer;
+        // font-size: 1em;
+        &:hover {
+          color: rgb(0, 0, 0);
+          background-color: gold;
+        }
+      }
+    }
   }
 }
