--- a/src/components/our record/our_record.scss
+++ b/src/components/our record/our_record.scss
@@ -1,28 +1,64 @@
-#our_record {
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  background-color: #474242;
-  padding: 50px 0;
-  margin-bottom: 100px;
+@import "../scss/config";
 
-  .our_record_item {
+@media only screen and (min-width: 768px) {
+  #our_record {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    // background-color: red;
+    justify-content: space-around;
+    align-content: center;
+    background-color: #474242;
+    padding: 40px 0;
+    // margin-bottom: 100px;
+    flex-wrap: wrap;
 
-    & h1 {
-      padding: 0;
-      margin: 0;
-      font-size: 4em;
-      color: gold;
+    .our_record_item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      // background-color: red;
+
+      & h1 {
+        padding: 0;
+        margin: 0;
+        font-size: 4em;
+        color: gold;
+      }
+      & p {
+        padding: 0;
+        margin: 0;
+        font-size: 1.5em;
+      }
     }
-    & p {
-      padding: 0;
-      margin: 0;
-      font-size: 1.5em;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #our_record {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    background-color: #474242;
+    padding: 40px 0;
+    margin: 0;
+    flex-wrap: wrap;
+
+    .our_record_item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      // background-color: red;
+
+      & h1 {
+        padding: 0;
+        margin: 0;
+        font-size: 4em;
+        color: gold;
+      }
+      & p {
+        padding: 0;
+        margin: 0;
+        font-size: 1.5em;
+      }
     }
   }
 }
