--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -1,91 +1,188 @@
-#our_services {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 75%;
-  margin: auto;
-  margin-bottom: 100px;
-  padding-top: 100px;
+@import "../scss/config";
 
-  #our_sercices_text {
+@media only screen and (min-width: 768px) {
+  #our_services {
     display: flex;
-    align-items: last baseline;
-    color: gold;
-    > div {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 50px;
+    padding-top: 50px;
+
+    #our_sercices_text {
       display: flex;
-      flex-direction: column;
-      width: 50%;
+      align-items: last baseline;
+      color: gold;
+      > div {
+        display: flex;
+        flex-direction: column;
+        // width: 50%;
 
-      & h5 {
-        font-size: 1.8rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-        padding: 0;
+        // & h5 {
+        //   font-size: 1.8rem;
+        //   font-weight: 700;
+        //   margin-bottom: 10px;
+        //   padding: 0;
+        //   margin: 0;
+        //   span {
+        //     color: #ffffff;
+        //     margin-right: 5px;
+        //   }
+        // }
+
+        // & h1 {
+        //   font-size: 3.6rem;
+        //   font-weight: 700;
+        //   margin-bottom: 20px;
+        //   padding: 0;
+        //   margin-top: 10px;
+        // }
+
+        // & p {
+        //   font-size: 1.2rem;
+        //   font-weight: 500;
+        //   margin-top: 20px;
+        //   color: white;
+        // }
+      }
+    }
+    #our_services_images {
+      display: flex;
+      justify-content: space-between;
+      gap: 25px;
+      width: 100%;
+      margin-top: 50px;
+      flex-wrap: wrap;
+      // width: 100%;
+
+      .our_services_item {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 32%;
         margin: 0;
-        span {
-          color: #ffffff;
-          margin-right: 5px;
-        }
-      }
-
-      & h1 {
-        font-size: 3.6rem;
-        font-weight: 700;
-        margin-bottom: 20px;
         padding: 0;
-        margin-top: 10px;
-      }
+        background-color: rgb(63, 54, 54);
+        padding-bottom: 20px;
+        text-align: center;
 
-      & p {
-        font-size: 1.2rem;
-        font-weight: 500;
-        margin-top: 20px;
-        color: white;
+        & img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        & h3 {
+          font-size: 1.8rem;
+          font-weight: 700;
+          color: rgb(245, 189, 6);
+          // padding: 0;
+          margin-bottom: 10px;
+        }
+
+        & p {
+          font-size: 1.2rem;
+          // margin-top: 10px;
+          color: white;
+          padding: 20px;
+          margin: 0;
+        }
       }
     }
   }
-  #our_services_images {
+}
+@media only screen and (max-width: 768px) {
+  #our_services {
     display: flex;
-    justify-content: space-between;
-    gap: 25px;
+    flex-direction: column;
     width: 100%;
     margin-top: 50px;
-    flex-wrap: wrap;
-    width: 100%;
+    margin-bottom: 25px;
 
-    .our_services_item {
-      box-sizing: border-box;
+    #our_sercices_text {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      width: 32%;
-      margin: 0;
-      padding: 0;
-      background-color: rgb(63, 54, 54);
-      padding-bottom: 20px;
+      align-items: last baseline;
+      color: gold;
       text-align: center;
-
-      & img {
+      > div {
+        display: flex;
+        flex-direction: column;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
 
-      & h3 {
-        font-size: 1.8rem;
-        font-weight: 700;
-        color: rgb(245, 189, 6);
-        // padding: 0;
-        margin-bottom: 10px;
-      }
+        // & h5 {
+        //   font-size: 1.38rem;
+        //   font-weight: 700;
+        //   margin-bottom: 10px;
+        //   padding: 0;
+        //   margin: 0;
+        //   span {
+        //     color: #ffffff;
+        //     margin-right: 5px;
+        //   }
+        // }
 
-      & p {
-        font-size: 1.2rem;
-        // margin-top: 10px;
-        color: white;
-        padding: 20px;
+        // & h1 {
+        //   font-size: 2.7rem;
+        //   font-weight: 700;
+        //   margin-bottom: -3px;
+        //   padding: 0;
+        //   margin-top: -3px;
+        // }
+
+        // & p {
+        //   font-size: 1rem;
+        //   font-weight: 500;
+        //   margin-top: 20px;
+        //   color: white;
+        //   margin-bottom: -15px;
+        // }
+      }
+    }
+    #our_services_card_container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 10px;
+      margin: 10px;
+      padding-top: 30px;
+
+      .our_services_item {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+        width: 100%;
         margin: 0;
+        padding: 0;
+        background-color: rgb(63, 54, 54);
+        padding-bottom: 20px;
+        text-align: center;
+
+        & img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+        & h3 {
+          font-size: 1.8rem;
+          font-weight: 700;
+          color: rgb(245, 189, 6);
+          // padding: 0;
+          margin-bottom: 10px;
+        }
+
+        & p {
+          font-size: 1.2rem;
+          // margin-top: 10px;
+          color: white;
+          padding: 20px;
+          margin: 0;
+        }
       }
     }
   }
