--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -1,12 +1,36 @@
-#partners_container {
+@import "../scss/config";
+
+@media only screen and (min-width: 768px) {
+  #partners_container {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  background-color: grey;
+  #partners {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    // height: 200px;
+  }
+}}
+@media only screen and (max-width: 768px) {
+  #partners_container {
     display: flex;
     justify-content: center;
     margin-top: 100px;
     background-color: grey;
+    flex-wrap: wrap;
     #partners {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 200px;
+      // display: flex;
+      // justify-content: space-around;
+      // align-items: center;
+      // flex-wrap: wrap;
+      height: 50px;
+
+      img {
+        width: 100px;
+        // height: 100px;
+      }
+    }
   }
 }
