--- a/src/components/portfolio videos/portfolio_videos.scss
+++ b/src/components/portfolio videos/portfolio_videos.scss
@@ -1,41 +1,85 @@
-@import '../scss/config';
+@import "../scss/config";
 
-#port_vid {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin-bottom: 100px;
+@media only screen and (min-width: 768px) {
+  #port_vid {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    // position: relative;
+    // margin-bottom: 100px;
 
-  #port_vid_text {
-    text-align: center;
-    z-index: 5000;
-    position: absolute;
-    width: 50%;
+    #port_vid_text {
+      text-align: center;
+      z-index: 5000;
+      position: absolute;
+      width: 50%;
 
-    & h1 {
-      font-size: 4em;
-      color: gold;
+      & h1 {
+        font-size: 4em;
+        color: gold;
+      }
+
+      button {
+        // width: 200px;
+        // padding: 20px;
+        // background-color: transparent;
+        // border: 1px solid gold;
+        // color: gold;
+        margin-top: 30px;
+        // cursor: pointer;
+        // &:hover {
+        //   color: rgb(255, 255, 255);
+        //   background-color: gold;
+        // }
+      }
     }
 
-    button {
-      // width: 200px;
-      // padding: 20px;
-      // background-color: transparent;
-      // border: 1px solid gold;
-      // color: gold;
-      margin-top: 30px;
-      // cursor: pointer;
-      // &:hover {
-      //   color: rgb(255, 255, 255);
-      //   background-color: gold;
-      // }
+    video {
+      width: 100%;
+      height: 650px;
     }
   }
+}
 
-  video {
-    width: 100%;
-    height: 650px;
+@media only screen and (max-width: 768px) {
+  #port_vid {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    // margin-bottom: 100px;
+
+    #port_vid_text {
+      text-align: center;
+      z-index: 5000;
+      position: absolute;
+      width: 80%;
+
+      & h1 {
+        font-size: 1.5em;
+        color: gold;
+      }
+
+      button {
+        // width: 200px;
+        // padding: 20px;
+        // background-color: transparent;
+        // border: 1px solid gold;
+        // color: gold;
+        margin-top: 5px;
+        // cursor: pointer;
+        // &:hover {
+        //   color: rgb(255, 255, 255);
+        //   background-color: gold;
+        // }
+      }
+    }
+
+    video {
+      width: 100%;
+      height: 650px;
+    }
   }
 }
