--- a/src/components/social icons/social_icons.scss
+++ b/src/components/social icons/social_icons.scss
@@ -1,27 +1,61 @@
-.social-icons {
-  display: flex;
+@import "../scss/config";
+
+@media only screen and (min-width: 768px) {
+  .social-icons {
+    display: flex;
+  }
+
+  .social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    background-color: transparent;
+    color: gold;
+    border: 1px solid gold;
+    border-radius: 50%;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+  }
+
+  .social-icon i {
+    font-size: 50px;
+  }
+
+  .social-icon:hover {
+    background-color: gold;
+    color: black;
+  }
 }
 
-.social-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-  background-color: transparent;
-  color: gold;
-  border: 1px solid gold;
-  border-radius: 50%;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
-}
+@media only screen and (max-width: 768px) {
+  .social-icons {
+    display: flex;
+  }
 
-.social-icon i {
-  font-size: 50px;
-}
+  .social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    background-color: transparent;
+    color: gold;
+    border: 1px solid gold;
+    border-radius: 50%;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+  }
 
-.social-icon:hover {
-  background-color: gold;
-  color: black;
+  .social-icon i {
+    font-size: 50px;
+  }
+
+  .social-icon:hover {
+    background-color: gold;
+    color: black;
+  }
 }
