--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,86 +1,89 @@
-#testimonials {
-  display: flex;
-  justify-content: space-between;
-  // gap: 40px;
-  width: 75%;
-  margin: auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
+@import "../scss/config";
 
-  #testimonials_text {
-    width: 50%;
-    padding-top: 0;
-    margin-top: 0;
+@media only screen and (min-width: 768px) {
+  #testimonials {
+    display: flex;
+    justify-content: space-between;
+    // gap: 40px;
+    // width: 75%;
+    // margin: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
 
-    h5 {
-      font-size: 1.5em;
+    #testimonials_text {
+      // width: 50%;
       padding-top: 0;
       margin-top: 0;
 
-      span {
+      h5 {
+        font-size: 1.5em;
+        padding-top: 0;
+        margin-top: 0;
+
+        span {
+          color: gold;
+          margin-right: 10px;
+        }
+      }
+
+      h1 {
+        font-size: 3.5em;
         color: gold;
-        margin-right: 10px;
+      }
+
+      p {
       }
     }
 
-    h1 {
-      font-size: 3.5em;
-      color: gold;
-    }
+    #testimonial_card_container {
+      width: 55%;
 
-    p {
-    }
-  }
-
-  #testimonial_card_container {
-    width: 55%;
-
-    .slider {
-      margin-left: 50px;
-      .testimonial_card {
-        display: flex;
-        flex-direction: column;
-        background-color: rgb(56, 60, 71);
-        max-width: 90%;
-        padding: 10px;
-
-        > p {
-          font-size: 1em;
-        }
-
-        .testimonial_image_byline {
+      .slider {
+        // margin-left: 50px;
+        .testimonial_card {
           display: flex;
-          justify-content: flex-start;
-          gap: 20px;
-          margin-top: 50px;
+          flex-direction: column;
+          background-color: rgb(56, 60, 71);
+          // max-width: 90%;
+          // padding: 10px;
 
-          img {
-            border-radius: 50px;
+          > p {
+            font-size: 1em;
           }
 
-          .testimonial_byline {
-            h4 {
-              padding: 0;
-              margin: 0;
+          .testimonial_image_byline {
+            display: flex;
+            justify-content: flex-start;
+            gap: 20px;
+            margin-top: 50px;
+
+            img {
+              border-radius: 50px;
             }
 
-            p {
-              padding: 0;
-              margin: 5px 0px;
+            .testimonial_byline {
+              h4 {
+                padding: 0;
+                margin: 0;
+              }
+
+              p {
+                padding: 0;
+                margin: 5px 0px;
+              }
             }
           }
         }
       }
     }
-  }
-  
-  // Add styles to make the dots visible
-  .slick-dots {
-    display: block !important; /* Ensure dots are displayed */
-    list-style: none;
-    text-align: center;
-    padding: 0;
 
+    // Add styles to make the dots visible
+    .slick-dots {
+      display: block !important; /* Ensure dots are displayed */
+      list-style: none;
+      text-align: center;
+      padding: 0;
+    }
     li {
       display: inline-block;
       margin: 0 5px;
@@ -102,6 +105,140 @@
       margin-top: 150px;
     }
 
+    .slick-active button {
+      background-color: gold;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #testimonials {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    // gap: 40px;
+    // width: 100%;
+    // margin: auto;
+    padding: 10px;
+    // padding-bottom: 100px;
+
+    #testimonials_text {
+      width: 100%;
+      padding-top: 0;
+      margin-top: 0;
+      text-align: center;
+
+      // h5 {
+      //   font-size: 1.3em;
+      //   padding-top: 0;
+      //   margin-top: 0;
+
+      //   span {
+      //     color: gold;
+      //     margin-right: 10px;
+      //   }
+      // }
+
+      // h1 {
+      //   font-size: 2.5em;
+      //   color: gold;
+      // }
+
+      // p {
+      //   font-size: 0.9em;
+      // }
+    }
+
+    #testimonial_card_container {
+      display: flex;
+      flex-direction: column;
+      // justify-items: center;
+      // align-content: center;
+      width: 100%;
+      // padding: 10px;
+      margin: 0;
+
+      .slider {
+        // display: flex;
+        // flex-direction: column;
+        // justify-items: center;
+        // // align-content: center;
+        // width: 100%;
+        padding: 15px;
+        background-color: rgb(56, 60, 71);
+        // padding-right: 0;
+        .testimonial_card {
+          display: flex;
+          flex-direction: column;
+          // justify-items: center;
+          // align-content: center;
+          // background-color: rgb(56, 60, 71);
+          // width: 100%;
+          padding: 15px;
+
+          // > p {
+          //   font-size: 1em;
+          // }
+
+          .testimonial_image_byline {
+            display: flex;
+            justify-content: flex-start;
+            gap: 20px;
+            margin-top: 50px;
+
+            img {
+              border-radius: 50px;
+            }
+
+            .testimonial_byline {
+              h4 {
+                // padding: 0;
+                // margin: 0;
+              }
+
+              // p {
+              //   padding: 0;
+              //   margin: 5px px;
+              // }
+            }
+          }
+        }
+      }
+      #starRating {
+        padding: 20px 0px;
+      }
+    }
+
+    // Add styles to make the dots visible
+    .slick-dots {
+      display: block !important; /* Ensure dots are displayed */
+      list-style: none;
+      text-align: center;
+      padding: 0;
+    }
+    li {
+      display: inline-block;
+      margin: 0 5px;
+    }
+
+    button {
+      font-size: 0;
+      line-height: 0;
+      display: block;
+      width: 10px;
+      height: 10px;
+      padding: 5px;
+      cursor: pointer;
+      color: transparent;
+      border: 0;
+      outline: none;
+      background-color: rgba(255, 255, 255, 0.5);
+      border-radius: 50%;
+      margin-top: 150px;
+    }
+    .slick-slider button {
+      visibility: hidden;
+    }
     .slick-active button {
       background-color: gold;
     }
