--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -1,62 +1,127 @@
-#why_choose_us {
-  display: flex;
-  gap: 60px;
-  width: 75%;
-  margin: auto;
+@import "../scss/config";
 
-  #why_choose_us_text {
-    width: 40%;
+@media only screen and (min-width: 769px) {
+  #why_choose_us {
+    display: flex;
+    gap: 60px;
+    // width: 75%;
+    // margin: auto;
 
-    & h5 {
-      margin: 0;
-      font-size: 1.5em;
-      color: rgb(250, 185, 7);
-      span {
-        color: white;
-        margin-right: 10px;
+    #why_choose_us_text {
+      // width: 40%;
+
+      & h5 {
+        margin: 0;
+        font-size: 1.5em;
+        color: rgb(250, 185, 7);
+        span {
+          color: white;
+          margin-right: 10px;
+        }
       }
-    }
 
-    & h1 {
-      color: rgb(250, 185, 7);
-      font-size: 3.5em;
-      padding: 0;
-      margin: 0;
-    }
+      & h1 {
+        color: rgb(250, 185, 7);
+        font-size: 3.5em;
+        padding: 0;
+        margin: 0;
+      }
 
-    & p {
+      & p {
         margin-top: 40px;
         margin-bottom: 40px;
         font-size: 1.2em;
+      }
+    }
+
+    #why_choose_us_card_container {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      // width: 60%;
+
+      #why_choose_us_card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // width: 40%;
+        border: 1px solid #f0f0f0;
+        padding: 20px 20px 0px 20px;
+        text-align: center;
+        img {
+          width: 50px;
+          margin-bottom: 10px;
+        }
+        & h3 {
+          font-size: 1.8rem;
+          font-weight: 700;
+          margin-bottom: 10px;
+          padding: 0;
+          margin: 0;
+          width: 100%;
+          text-wrap: wrap;
+        }
+      }
     }
   }
-
-  #why_choose_us_card_container {
+}
+@media only screen and (max-width: 768px) {
+  #why_choose_us {
     display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    // gap: 60px;
+    // width: 100%;
+    margin: auto;
+    padding: 10px;
 
-    #why_choose_us_card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 40%;
-      border: 1px solid #f0f0f0;
-      padding: 20px 20px 0px 20px;
+    #why_choose_us_text {
       text-align: center;
-      img {
-        width: 50px;
-        margin-bottom: 10px;
+      // margin: 10px;
+      // & h5 {
+      //   margin: 0;
+      //   font-size: 1.5em;
+      //   color: rgb(250, 185, 7);
+      //   span {
+      //     color: white;
+      //     margin-right: 10px;
+      //   }
+      // }
+
+      // & h1 {
+      //   color: rgb(250, 185, 7);
+      //   font-size: 3.5em;
+      //   padding: 0;
+      //   margin: 0;
+      //   text-align: center;
+      // }
+
+      & p {
+        // margin-top: 40px;
+        // margin-bottom: 40px;
+        // font-size: 1.2em;
+        // text-align: center;
       }
-      & h3 {
-        font-size: 1.8rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-        padding: 0;
-        margin: 0;
+    }
+
+    #why_choose_us_card_container {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      width: 100%;
+
+      #why_choose_us_card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
-        text-wrap: wrap;
+        border: 1px solid #f0f0f0;
+        padding: 20px 20px 0px 20px;
+        text-align: center;
+        margin-top: 20px;
+        img {
+          width: 50px;
+        }
       }
     }
   }
