--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -108,6 +108,7 @@
       align-items: last baseline;
       color: gold;
       text-align: center;
+      margin: 5px 20px;
       > div {
         display: flex;
         flex-direction: column;
