--- a/src/components/why choose us/why_choose_us.scss
+++ b/src/components/why choose us/why_choose_us.scss
@@ -77,6 +77,7 @@
 
     #why_choose_us_text {
       text-align: center;
+      margin: 5px 20px;
       // margin: 10px;
       // & h5 {
       //   margin: 0;
