--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -29,26 +29,21 @@
         // background-color: blue;
         position: absolute;
         top: 50%;
-        left: 40%;
+        left: 42%;
         transform: translate(-50%, -50%);
         text-align: left;
-        width: 60%;
+        width: 50%;
         & h5 {
-          font-size: 1em; /* Set font size for h5 */
-          background-color: green($color: #000000);
-          margin-bottom: 20px;
-          padding-top: 0;
+          font-size: 1.8em;
         }
 
         & h1 {
-          font-size: 2.5em; /* Set font size for h1 */
-          margin-top: 0;
-          padding-top: 0;
+          font-size: 5.9em;
         }
 
-        & p {
-          font-size: 1em; /* Set font size for paragraphs */
-        }
+        // & p {
+        //   font-size: 1em; /* Set font size for paragraphs */
+        // }
       }
     }
   }
