--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -77,21 +77,21 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      width: 100%;
-      // margin: auto;
+      // width: 100%;
+      margin: 5px 20px;
       color: gold;
 
-      & h5 {
-        font-size: 1.3em;
-      }
-      span {
-        color: white;
-        margin-right: 10px;
-      }
+      // & h5 {
+      //   font-size: 1.3em;
+      // }
+      // span {
+      //   color: white;
+      //   margin-right: 10px;
+      // }
 
       & h1 {
-        font-size: 1.5em;
-        margin-top: 10px;
+        // font-size: 1.5em;
+        // margin-top: 10px;
       }
     }
     #gallery_container {
