--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -56,6 +56,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+        margin: 5px 20px;
         // width: 75%;
         // margin: auto;
         // z-index: 5000;
