--- a/src/components/scss/_config.scss
+++ b/src/components/scss/_config.scss
@@ -1,10 +1,17 @@
 // _config.scss
 h1,
-h5 {
+h2,
+h3, h5 {
   font-family: "Roboto", sans-serif;
   color: gold;
 }
 h1 {
+  font-size: 4.3em;
+  margin-top: 20px;
+  margin-bottom: 35px;
+  line-height: 1em;
+}
+h2 {
   font-size: 3em;
   margin-top: 20px;
   margin-bottom: 35px;
