--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -123,9 +123,9 @@
     // padding-bottom: 100px;
 
     #testimonials_text {
-      width: 100%;
+      // width: 100%;
       padding-top: 0;
-      margin-top: 0;
+      margin: 5px 20px;
       text-align: center;
 
       // h5 {
